remove commons-io since we already have guava